--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "image"
     ],
     "licenses": "MIT",
-    "main":"src/index.js",
+    "main":"src/main.js",
     "scripts": {
         "dev": "webpack-dev-server --mode development",
         "build": "webpack --mode production"
